--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "dependencies": {
-    "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
     "connect-mongo": "^4.6.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "express-sessions": "^1.0.6",
-    "liquid": "^5.1.1",
+    "express-session": "^1.17.3",
     "liquid-express-views": "^1.0.8",
     "method-override": "^3.0.0",
+    "mongoose": "^6.4.4",
     "morgan": "^1.10.0",
     "node-fetch": "^2.6.7"
   },
